<resources>
    <string name="app_name" translatable="false">Admin</string>
    <string name="send_notification">Send notification</string>
    <string name="profile_contact_item">Contact</string>
    <string name="profile_notes_item">Notes</string>

    <string name="email_signature">\n\nSalon Litsa\n2102717756\nEl Alamein 46</string>

    <string name="opening_app_problem">Something went wrong! Ensure that you are logged in to %s and try again</string>
    <string name="dismiss_warning_dialog">Dismiss</string>
    <string name="dial_app">Dial</string>
    <string name="firstname_hint">Firstname</string>
    <string name="lastname_hint">Lastname</string>
    <string name="nickname_hint">Nickname</string>
    <string name="phone_hint">Phone</string>
    <string name="e_mail_hint" translatable="false">E-mail</string>
    <string name="fb_profile_hint">FB Profile</string>
    <string name="save_edits_btn_text">Save</string>

    <string name="save_successful">Changes saved!</string>
    <string name="save_failed">Changes not saved!</string>
    <string name="profile_edit_item">Edit</string>
    <string name="no_edits_made">No changes were made</string>
    <string name="unsaved_changes_warning_title">Unsaved changes</string>
    <string name="unsaved_changes_warning_msg">Proceed without saving?</string>
    <string name="unsaved_merging_warning_msg">Proceed without merging?</string>
    <string name="dialog_yes_btn">Yes</string>
    <string name="dialog_no_btn">No</string>
    <string name="note_saved">Note saved</string>
    <string name="note_not_saved">Note not saved</string>
    <string name="note_deleted">Note deleted</string>
    <string name="note_not_deleted">Note note deleted</string>
    <string name="fill_field_error_msg">Please fill this field</string>
    <string name="one_field_requited_err_msg">At least one of the two fields must be filled</string>
    <string name="user_creation_success">User created successfully</string>
    <string name="user_creation_err">User not saved!</string>
    <string name="all_filter">All</string>
    <string name="registered_filter">Registered</string>
    <string name="unregistered_filter">Unregistered</string>
    <string name="search_customer_hint" translatable="false">Dimitriakos</string>
    <string name="female_gender_btn">Female</string>
    <string name="male_gender_btn">Male</string>
    <string name="any_gender_btn">Any</string>
    <string name="select_gender_err">You must select a gender</string>
    <string name="merge_customers">Merge</string>
    <string name="merge_profile_hint">Choose profile to merge with</string>
    <string name="firstname_conflict_unregistered">Unregistered</string>
    <string name="firstname_conflict_registered">Registered</string>
    <string name="save_btn">Save</string>

    <string name="number_of_conflicts" translatable="false">%d/%d</string>
    <string name="choice_conflict">Choose one of the two</string>
    <string name="delete_user_context_menu_item">Delete</string>
    <string name="delete_fail">Deletion failure!</string>
    <string name="delete_success">Deletion success!</string>
    <string name="image_stored">Image stored!</string>
    <string name="image_not_stored">Image not stored!</string>
    <string name="img_copy_err">Error handling image</string>
    <string name="notify_for">Notify for</string>
    <string name="notify_customer_for">Notify customer for:</string>
    <string name="custom_notification_message_hint">Message</string>
    <string name="custom_notification_title_hint">Title</string>
    <string name="send_notification_btn">Send notification</string>
    <string name="notification_sent">Notification sent!</string>
    <string name="notification_not_sent">Notification not sent!</string>

    <string-array name="pre_made_notifications">
        <item>Appointment cancellation</item>
        <item>Custom</item>
    </string-array>

    <string name="appointment_cancellation_title">Appointment cancellation</string>
    <string name="appointment_cancellation_message">Your appointment have been canceled</string>
    <string name="email_change_warning_title">User is registered</string>
    <string name="email_change_warning_message">Because user is register it is highly recommended to change the email address on his own. Otherwise may loose ability to login to his account.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="copied_to_clipboard">Copied to clipboard!</string>
    <string name="missing_app">Missing app</string>
    <string name="install_missing_app">No app found to complete this action. Do you want to download one?</string>
    <string name="note_title_hint">Title</string>
    <string name="note_note_hint">Note</string>
    <string name="gdrive_api_disabled_title" translatable="false">Google Drive API</string>
</resources>