<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.customer.contact.SendNotificationFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/select_notification_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/notify_customer_for"
            app:layout_constraintBottom_toTopOf="@id/notify_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/notify_menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/notify_for"
            app:layout_constraintBottom_toTopOf="@id/custom_notification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_notification_label">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:text="Appointment cancellation" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/custom_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/notify_menu"
            app:layout_constraintStart_toStartOf="@id/notify_menu"
            app:layout_constraintTop_toBottomOf="@id/notify_menu"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/custom_notification_hint"
                tools:text="There is a free spot at 5:00 PM" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/send_notification_btn"
            app:layout_constraintEnd_toEndOf="@id/custom_notification"
            app:layout_constraintStart_toStartOf="@id/custom_notification"
            app:layout_constraintTop_toBottomOf="@id/custom_notification" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>