<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.homelab.appointmentadmin.ui.customer.edit.CustomerProfileEditViewModel" />

        <variable
            name="customerProfileEditFragment"
            type="com.homelab.appointmentadmin.ui.customer.edit.CustomerProfileEditFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/save_edits_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.customer.edit.CustomerProfileEditFragment">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstname_edit"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/profile_items_margin_top"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/ic_account_circle_36">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="@dimen/profile_edit_edit_text_width"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/firstname_hint"
                        android:text="@{viewModel.firstname}"
                        android:textSize="@dimen/text_size"
                        tools:text="Customer" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastname_edit"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/profile_items_margin_top"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/firstname_edit"
                    app:startIconDrawable="@drawable/ic_account_circle_36">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="@dimen/profile_edit_edit_text_width"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/lastname_hint"
                        android:text="@{viewModel.lastname}"
                        android:textSize="@dimen/text_size"
                        tools:text="Customer" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nickname_edit"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/profile_items_margin_top"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lastname_edit"
                    app:startIconDrawable="@drawable/ic_account_circle_36">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="@dimen/profile_edit_edit_text_width"
                        android:layout_height="wrap_content"
                        android:hint="@string/nickname_hint"
                        android:text="@={viewModel.nickname}"
                        android:textSize="@dimen/text_size"
                        tools:text="Customer" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_edit"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/profile_items_margin_top"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nickname_edit"
                    app:startIconDrawable="@drawable/ic_phone_36">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="@dimen/profile_edit_edit_text_width"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_hint"
                        android:text="@={viewModel.phone}"
                        android:textSize="@dimen/text_size"
                        tools:text="6985201472" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_edit"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/profile_items_margin_top"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phone_edit"
                    app:startIconDrawable="@drawable/ic_email_36">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_edit_text"
                        android:layout_width="@dimen/profile_edit_edit_text_width"
                        android:layout_height="wrap_content"
                        android:hint="@string/e_mail_hint"
                        android:text="@={viewModel.email}"
                        android:textSize="@dimen/text_size"
                        tools:text="me@me.com" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_edits_btn"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="@dimen/profile_edit_edit_text_width"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/profile_items_margin_top"
                    android:onClick="@{() -> customerProfileEditFragment.saveChanges()}"
                    android:text="@string/save_edits_btn_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_edit" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</layout>